2011-09-28  Luke Macpherson   <macpherson@chromium.org>

        Only resolve direction aware properties when properties are direction aware.
        https://bugs.webkit.org/show_bug.cgi?id=68968

        Reviewed by Eric Seidel.

        No new tests / no functionality changed.

        Profiling showed a ~8% improvement in applyProperty by not calling resolveDirectionAwareProperty for every property.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):

2011-09-28  Simon Fraser  <simon.fraser@apple.com>

        fast/dom/scroll-element-to-rect.html fails on WK1 Mac port
        https://bugs.webkit.org/show_bug.cgi?id=68815

        Reviewed by Dan Bernstein.
        
        FrameView::scrollElementToRect() was incorrectly using Element::boundsInWindowSpace(),
        which is window-relative (not web view-relative), and has flipped coordinates
        in WebKit1.
        
        Change to use Node::getRect() which is what the author intended.

        * dom/Element.h:
        * page/FrameView.cpp:
        (WebCore::FrameView::scrollElementToRect):

2011-09-28  Peter Beverloo  <peter@chromium.org>

        Don't clamp cubic-bezier timing functions between 0 and 1
        https://bugs.webkit.org/show_bug.cgi?id=45761

        Remove the limitation of clamping the cubic-bezier timing function
        values between 0 and 1, following the specification change made on
        April 5 of this year.

        Reviewed by Dean Jackson.

        Tests: transitions/cubic-bezier-overflow-color.html
               transitions/cubic-bezier-overflow-length.html
               transitions/cubic-bezier-overflow-shadow.html
               transitions/cubic-bezier-overflow-svg-length.html
               transitions/cubic-bezier-overflow-transform.html

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseCubicBezierTimingFunctionValue):

2011-09-28  Chris Rogers  <crogers@google.com>
