@@ -221,7 +221,6 @@ public:
     virtual void animateAndLayout(double frameBeginTime);
     virtual PassOwnPtr<WebCore::CCThread> createCompositorThread();
     virtual PassRefPtr<WebCore::GraphicsContext3D> createLayerTreeHostContext3D();
-    virtual PassOwnPtr<WebCore::LayerPainterChromium> createRootLayerPainter();
     virtual void didRecreateGraphicsContext(bool success);
 #if !USE(THREADED_COMPOSITING)
     virtual void scheduleComposite();
