@@ -1,3 +1,14 @@
+2011-09-28  Antoine Labour  <piman@chromium.org>
+
+        Remove unused createRootLayerPainter from CCLayerTreeHostClient
+        https://bugs.webkit.org/show_bug.cgi?id=69042
+
+        Reviewed by James Robinson.
+
+        No new test needed: no semantic change.
+
+        * platform/graphics/chromium/cc/CCLayerTreeHost.h:
+
 2011-09-28  Luke Macpherson   <macpherson@chromium.org>
 
         Only resolve direction aware properties when properties are direction aware.
